--- a/IoT/seonghwk/from_Jinuk/QT_screens_UI/mainwindow.ui
+++ b/IoT/seonghwk/from_Jinuk/QT_screens_UI/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1276</width>
-    <height>951</height>
+    <width>1280</width>
+    <height>956</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -38,7 +38,7 @@
       <string notr="true">background: #FFF3C8;</string>
      </property>
      <property name="currentIndex">
-      <number>8</number>
+      <number>9</number>
      </property>
      <widget class="QWidget" name="srvc_chk_page">
       <property name="styleSheet">
@@ -147,7 +147,7 @@ border-radius: 40px;</string>
         </rect>
        </property>
        <property name="styleSheet">
-        <string notr="true">background:white;border-radius:100px;</string>
+        <string notr="true">background:#FFFFFF;border-radius:100px;</string>
        </property>
        <property name="frameShape">
         <enum>QFrame::StyledPanel</enum>
@@ -171,7 +171,7 @@ border-radius: 40px;</string>
          </font>
         </property>
         <property name="styleSheet">
-         <string notr="true">background: #FFAB7C;color: white;border-radius:50px;</string>
+         <string notr="true">background: #FFAB7C;color: #FFFFFF;border-radius:50px;</string>
         </property>
         <property name="text">
          <string>시작하기</string>
@@ -724,7 +724,7 @@ border-radius: 80px;</string>
               <enum>Qt::ClickFocus</enum>
              </property>
              <property name="styleSheet">
-              <string notr="true">background:#FFAB7C;color:white;
+              <string notr="true">background:#FFAB7C;color:#FFFFFF;
 border-radius: 20px;
 border: 3px solid brown;</string>
              </property>
@@ -799,49 +799,19 @@ border: 3px solid brown;</string>
               </font>
              </property>
              <property name="styleSheet">
-              <string notr="true">#input_relation_combo{
-background:#FFAB7C; color:white;
+              <string notr="true">background:#FFAB7C; color:#FFFFFF;
 border-radius: 20px;
 border: 3px solid brown;
-padding-left:80px;
-}
-
-#input_relation_combo::on{
-border: 3px solid red;
-}
-
-#input_relation_combo::drop-down{
-border:0;
-}
-
-
-#input_relation_combo QListView{
-background:#FFAB7C;
-color:white;
-border:3px solid brown;
-border-radius:0;
-}
-
-#input_relation_combo QListView::item{
-
-}
-
-#input_relation_combo QListView::item::hover{
-background:#white;
-color:#A55252
-}</string>
+padding-left:80px;</string>
              </property>
              <property name="currentText">
-              <string/>
+              <string>눌러서 선택</string>
              </property>
              <property name="iconSize">
               <size>
                <width>16</width>
                <height>16</height>
               </size>
-             </property>
-             <property name="placeholderText">
-              <string>눌러서 선택</string>
              </property>
              <property name="frame">
               <bool>true</bool>
@@ -936,7 +906,7 @@ color:#A55252
              </property>
              <property name="styleSheet">
               <string notr="true">#input_receiver_combo{
-background:#FFAB7C; color:white;
+background:#FFAB7C; color:#FFFFFF;
 border-radius: 20px;
 border: 3px solid brown;
 padding-left:80px;
@@ -953,7 +923,7 @@ border:0;
 
 #input_receiver_combo QListView{
 background:#FFAB7C;
-color:white;
+color:#FFFFFF;
 border:3px solid brown;
 border-radius:0;
 }
@@ -963,7 +933,7 @@ border-radius:0;
 }
 
 #input_receiver_combo QListView::item::hover{
-background:#white;
+background:#FFFFFF;
 color:#A55252
 }</string>
              </property>
@@ -975,9 +945,6 @@ color:#A55252
                <width>16</width>
                <height>16</height>
               </size>
-             </property>
-             <property name="placeholderText">
-              <string>눌러서 선택</string>
              </property>
              <property name="frame">
               <bool>true</bool>
@@ -1113,7 +1080,7 @@ border-radius:0;</string>
         <property name="styleSheet">
          <string notr="true">background:#FFAB7C;
 border-radius: 25;
-color: white;
+color: #FFFFFF;
 </string>
         </property>
         <property name="text">
@@ -1200,7 +1167,7 @@ color: white;
         </rect>
        </property>
        <property name="styleSheet">
-        <string notr="true">background: white; border-radius: 50px;</string>
+        <string notr="true">background: #FFFFFF; border-radius: 50px;</string>
        </property>
        <widget class="QPushButton" name="select_pic_button">
         <property name="geometry">
@@ -1220,7 +1187,7 @@ color: white;
         <property name="styleSheet">
          <string notr="true">background: #FFAB7C;
 border-radius: 25px;
-color: white;</string>
+color: #FFFFFF;</string>
         </property>
         <property name="text">
          <string>사진 찍기</string>
@@ -1268,7 +1235,7 @@ color: white;</string>
         </property>
         <property name="styleSheet">
          <string notr="true">background-color: rgba(128, 128, 128, 128);
-color:white;
+color:#FFFFFF;
 border-radius:0;</string>
         </property>
         <property name="text">
@@ -1292,7 +1259,7 @@ border-radius:0;</string>
         </rect>
        </property>
        <property name="styleSheet">
-        <string notr="true">background: white; border-radius: 50px;</string>
+        <string notr="true">background: #FFFFFF; border-radius: 50px;</string>
        </property>
        <widget class="QPushButton" name="select_vid_button">
         <property name="geometry">
@@ -1312,7 +1279,7 @@ border-radius:0;</string>
         <property name="styleSheet">
          <string notr="true">background: #FFAB7C;
 border-radius: 25px;
-color: white;</string>
+color: #FFFFFF;</string>
         </property>
         <property name="text">
          <string>영상 찍기</string>
@@ -1351,7 +1318,7 @@ color: white;</string>
         </property>
         <property name="styleSheet">
          <string notr="true">background-color: rgba(128, 128, 128, 128);
-color:white;
+color:#FFFFFF;
 border-radius:0;</string>
         </property>
         <property name="text">
@@ -1363,12 +1330,132 @@ border-radius:0;</string>
        </widget>
       </widget>
      </widget>
+     <widget class="QWidget" name="photo_page">
+      <widget class="QPushButton" name="photo_take_3sec">
+       <property name="geometry">
+        <rect>
+         <x>970</x>
+         <y>370</y>
+         <width>271</width>
+         <height>91</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>32</pointsize>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background: #FFAB7C;border-radius:25px; color: #FFFFFF;</string>
+       </property>
+       <property name="text">
+        <string>3초 타이머</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="photo_take_10sec">
+       <property name="geometry">
+        <rect>
+         <x>970</x>
+         <y>510</y>
+         <width>271</width>
+         <height>91</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>32</pointsize>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background: #FFAB7C;border-radius:25px; color: #FFFFFF;</string>
+       </property>
+       <property name="text">
+        <string>10초 타이머</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="photo_prev_button">
+       <property name="geometry">
+        <rect>
+         <x>970</x>
+         <y>700</y>
+         <width>123</width>
+         <height>107</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>prev</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="photo_home_button">
+       <property name="geometry">
+        <rect>
+         <x>1120</x>
+         <y>700</y>
+         <width>123</width>
+         <height>107</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>home</string>
+       </property>
+      </widget>
+      <widget class="QWidget" name="photo_widget" native="true">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>30</y>
+         <width>900</width>
+         <height>900</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background: #FFFFFF;border-radius:80;</string>
+       </property>
+       <widget class="QWidget" name="photo_viewfinder" native="true">
+        <property name="geometry">
+         <rect>
+          <x>66</x>
+          <y>66</y>
+          <width>768</width>
+          <height>768</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background:black; border-radius:0;</string>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QPushButton" name="photo_take_now">
+       <property name="geometry">
+        <rect>
+         <x>970</x>
+         <y>230</y>
+         <width>271</width>
+         <height>91</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>32</pointsize>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background: #FFAB7C;border-radius:25px; color: #FFFFFF;</string>
+       </property>
+       <property name="text">
+        <string>바로 찍기</string>
+       </property>
+      </widget>
+     </widget>
      <widget class="QWidget" name="image_page">
       <widget class="QPushButton" name="image_next_button">
        <property name="geometry">
         <rect>
-         <x>470</x>
-         <y>410</y>
+         <x>440</x>
+         <y>360</y>
          <width>75</width>
          <height>24</height>
         </rect>
@@ -1380,8 +1467,8 @@ border-radius:0;</string>
       <widget class="QPushButton" name="image_home_button">
        <property name="geometry">
         <rect>
-         <x>530</x>
-         <y>320</y>
+         <x>470</x>
+         <y>300</y>
          <width>75</width>
          <height>24</height>
         </rect>
@@ -1406,8 +1493,8 @@ border-radius:0;</string>
       <widget class="QPushButton" name="image_prev_button">
        <property name="geometry">
         <rect>
-         <x>230</x>
-         <y>430</y>
+         <x>330</x>
+         <y>360</y>
          <width>75</width>
          <height>24</height>
         </rect>
@@ -1421,8 +1508,8 @@ border-radius:0;</string>
       <widget class="QPushButton" name="video_home_button">
        <property name="geometry">
         <rect>
-         <x>1000</x>
-         <y>370</y>
+         <x>790</x>
+         <y>150</y>
          <width>75</width>
          <height>24</height>
         </rect>
@@ -1434,8 +1521,8 @@ border-radius:0;</string>
       <widget class="QPushButton" name="video_next_button">
        <property name="geometry">
         <rect>
-         <x>1020</x>
-         <y>420</y>
+         <x>760</x>
+         <y>410</y>
          <width>75</width>
          <height>24</height>
         </rect>
@@ -1447,8 +1534,8 @@ border-radius:0;</string>
       <widget class="QLabel" name="video_label">
        <property name="geometry">
         <rect>
-         <x>630</x>
-         <y>50</y>
+         <x>610</x>
+         <y>20</y>
          <width>50</width>
          <height>16</height>
         </rect>
@@ -1460,8 +1547,8 @@ border-radius:0;</string>
       <widget class="QPushButton" name="video_prev_button">
        <property name="geometry">
         <rect>
-         <x>1040</x>
-         <y>490</y>
+         <x>760</x>
+         <y>330</y>
          <width>75</width>
          <height>24</height>
         </rect>
@@ -1470,30 +1557,81 @@ border-radius:0;</string>
         <string>Prev</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="video_record_button">
+      <widget class="QPushButton" name="video_control_button">
        <property name="geometry">
         <rect>
-         <x>540</x>
-         <y>710</y>
-         <width>191</width>
-         <height>71</height>
+         <x>370</x>
+         <y>590</y>
+         <width>75</width>
+         <height>24</height>
         </rect>
        </property>
        <property name="text">
         <string>Record</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label">
+      <widget class="QLabel" name="video_stream">
        <property name="geometry">
         <rect>
-         <x>260</x>
-         <y>150</y>
+         <x>90</x>
+         <y>70</y>
          <width>640</width>
          <height>480</height>
         </rect>
        </property>
        <property name="text">
         <string>TextLabel</string>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QWidget" name="video_review_page">
+      <widget class="QPushButton" name="video_review_prev_button">
+       <property name="geometry">
+        <rect>
+         <x>1010</x>
+         <y>440</y>
+         <width>75</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Retry</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="video_review_next_button">
+       <property name="geometry">
+        <rect>
+         <x>1010</x>
+         <y>500</y>
+         <width>75</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Submit</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="video_review_home_button">
+       <property name="geometry">
+        <rect>
+         <x>1020</x>
+         <y>370</y>
+         <width>75</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Home</string>
+       </property>
+      </widget>
+      <widget class="QVideoWidget" name="widget" native="true">
+       <property name="geometry">
+        <rect>
+         <x>70</x>
+         <y>130</y>
+         <width>640</width>
+         <height>480</height>
+        </rect>
        </property>
       </widget>
      </widget>
@@ -1562,8 +1700,8 @@ border-radius:0;</string>
    <slot>go_end_page()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>529</x>
-     <y>431</y>
+     <x>499</x>
+     <y>381</y>
     </hint>
     <hint type="destinationlabel">
      <x>603</x>
@@ -1578,8 +1716,8 @@ border-radius:0;</string>
    <slot>go_home_page()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>585</x>
-     <y>338</y>
+     <x>525</x>
+     <y>318</y>
     </hint>
     <hint type="destinationlabel">
      <x>637</x>
@@ -1626,28 +1764,12 @@ border-radius:0;</string>
    <slot>go_home_page()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>1048</x>
-     <y>387</y>
+     <x>538</x>
+     <y>267</y>
     </hint>
     <hint type="destinationlabel">
      <x>640</x>
      <y>402</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>video_next_button</sender>
-   <signal>clicked()</signal>
-   <receiver>Form</receiver>
-   <slot>go_end_page()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>1082</x>
-     <y>442</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>632</x>
-     <y>469</y>
     </hint>
    </hints>
   </connection>
@@ -1674,8 +1796,8 @@ border-radius:0;</string>
    <slot>go_prev_page()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>1112</x>
-     <y>509</y>
+     <x>572</x>
+     <y>319</y>
     </hint>
     <hint type="destinationlabel">
      <x>663</x>
@@ -1690,8 +1812,8 @@ border-radius:0;</string>
    <slot>go_prev_page()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>274</x>
-     <y>450</y>
+     <x>374</x>
+     <y>380</y>
     </hint>
     <hint type="destinationlabel">
      <x>589</x>
@@ -1818,28 +1940,124 @@ border-radius:0;</string>
    <slot>go_next_page()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>923</x>
-     <y>821</y>
+     <x>908</x>
+     <y>847</y>
     </hint>
     <hint type="destinationlabel">
-     <x>1277</x>
-     <y>861</y>
+     <x>1284</x>
+     <y>854</y>
     </hint>
    </hints>
   </connection>
   <connection>
-   <sender>video_record_button</sender>
+   <sender>video_review_home_button</sender>
    <signal>clicked()</signal>
    <receiver>Form</receiver>
-   <slot>record_video()</slot>
+   <slot>go_home_page()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>681</x>
-     <y>750</y>
+     <x>1069</x>
+     <y>384</y>
     </hint>
     <hint type="destinationlabel">
-     <x>1278</x>
-     <y>783</y>
+     <x>1281</x>
+     <y>379</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>video_review_prev_button</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>go_prev_page()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1074</x>
+     <y>451</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1280</x>
+     <y>452</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>video_review_next_button</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>go_next_page()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1051</x>
+     <y>507</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1283</x>
+     <y>512</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>video_control_button</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>record_control()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>408</x>
+     <y>596</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>411</x>
+     <y>956</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>video_next_button</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>go_next_page()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>823</x>
+     <y>424</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1280</x>
+     <y>440</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>photo_prev_button</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>go_prev_page()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1067</x>
+     <y>732</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1280</x>
+     <y>647</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>photo_home_button</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>go_home_page()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1215</x>
+     <y>724</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1281</x>
+     <y>752</y>
     </hint>
    </hints>
   </connection>
@@ -1852,6 +2070,6 @@ border-radius:0;</string>
   <slot>close_window()</slot>
   <slot>check_service_validation()</slot>
   <slot>check_input()</slot>
-  <slot>record_video()</slot>
+  <slot>record_control()</slot>
  </slots>
 </ui>
